--- a/doc/manual/changelogs.tex
+++ b/doc/manual/changelogs.tex
@@ -3,7 +3,7 @@
 
 \subsection*{Version 2.0.0}
 The ViennaGrid internals have been completely redesigned for higher flexibility.
-Some rather significent adjustments to the user API were necessary.
+Some rather significant adjustments to the user API were necessary.
 \begin{itemize}
  \item Renamed the old \lstinline|domain_t| to \lstinline|mesh| in order to avoid ambiguities with the mathematical \emph{problem domain}.
  \item Replaced \lstinline|viennagrid::ncells<>()| with \lstinline|viennagrid::elements<>()| to obtain range objects.
